--- a/sign_up_form/01/style.css
+++ b/sign_up_form/01/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+:root {
+  --primary-color: #d3d3d4;
+  --secondary-color: #f2f2f2;
+  --submit-color: #2a6df4;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -16,11 +22,17 @@ body {
 }
 
 .container {
-  width: 500px;
+  width: 600px;
+  font-size: 1rem;
 }
 
 .top {
   text-align: center;
+}
+
+.top h1 {
+  margin: 1rem;
+  font-size: 3rem;
 }
 
 .top-text p {
@@ -33,65 +45,160 @@ body {
   display: inline-block;
 }
 
-.o-auth {
-  margin: 1.2rem 0;
-  display: grid;
-  grid-template: 1fr /1fr 1ch 1fr;
+.top a {
+  color: var(--submit-color);
 }
 
-.o-auth span {
-  grid-column: 2/3;
-}
-
-.o-auth .twitter {
-  grid-column: 1/2;
-}
-
-.o-auth .facebook {
-  grid-column: 3/4;
-}
-
-.o-auth a {
-  margin: 1rem 0;
+.twitter,
+.facebook {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: black;
   text-decoration: none;
-  background-color: lightgray;
-  padding: 0.5rem 2rem;
+  background-color: var(--secondary-color);
   border-radius: 3px;
+  font-size: 1.3rem;
+  text-align: center;
 }
 
-.o-auth i {
+form i {
+  padding: 0;
+  margin: 0;
   margin-right: 1ch;
 }
 
-span {
-  display: flex;
-  justify-content: center;
-}
-
-.form-container input {
+.form-container input:not(#notify) {
   border-radius: 5px;
   padding: 12px 15px;
 }
+
+.form-container input::placeholder {
+  font-size: 1rem;
+}
+
+.form-container input:not(#notify, #submit) {
+  border: solid var(--primary-color) 2px;
+}
+
 .form-container input:focus {
   outline: none;
 }
 
-.names {
+form {
+  margin-top: 1.5rem;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin: 2rem 0;
+  grid-template:
+    1fr 2ch 2ch 1fr 2ch 1fr 2ch 1fr 2ch 1fr 1fr 2ch
+    /1fr 1ch 1fr;
+  row-gap: 1rem;
 }
 
-.names #first-name {
-  margin: 0;
+form label {
+  margin-top: 0.7rem;
+}
+
+.twitter {
   grid-column: 1/2;
-  grid-row: 2/3;
-  width: 95%;
+  grid-row: 1/2;
 }
 
-.names #last-name {
+.facebook {
+  grid-column: 3/4;
+  grid-row: 1/2;
+}
+
+.form-container span:nth-of-type(1) {
   grid-column: 2/3;
   grid-row: 2/3;
-  width: 95%;
+  font-size: 1.2rem;
+}
+
+#first-name-label {
+  grid-column: 1/2;
+  grid-row: 3/4;
+}
+
+#first-name {
+  grid-column: 1/2;
+  grid-row: 4/5;
+}
+
+#last-name-label {
+  grid-column: 3/4;
+  grid-row: 3/4;
+}
+
+#last-name {
+  grid-column: 3/4;
+  grid-row: 4/5;
+}
+
+#email-label {
+  grid-column: 1/4;
+  grid-row: 5/6;
+}
+
+#email {
+  grid-column: 1/4;
+  grid-row: 6/7;
+}
+
+#password-label {
+  grid-column: 1/4;
+  grid-row: 7/8;
+}
+
+#password {
+  grid-column: 1/4;
+  grid-row: 8/9;
+}
+
+form span:nth-of-type(2) {
+  grid-column: 1/4;
+  grid-row: 9/10;
+
+  margin-top: -0.7rem;
+  font-size: 0.8rem;
+  margin-bottom: 1rem;
+  color: #868884;
+}
+
+.send-updates {
+  grid-column: 1/4;
+  grid-row: 10/11;
+
+  margin: 1rem 0;
+}
+
+.send-updates input[type='radio'] {
+  border-radius: 3px;
+  border: 1px solid var(--primary-color);
+  padding: 0.5em;
+  margin-top: -3px;
+  vertical-align: middle;
+  -webkit-appearance: none;
+}
+
+#submit {
+  grid-column: 1/4;
+  grid-row: 11/12;
+
+  color: #fff;
+  background-color: var(--submit-color);
+  border: none;
+  font-size: 1.5rem;
+}
+
+#privacy-policy {
+  grid-column: 1/4;
+  grid-row: 12/13;
+
+  margin: 0;
+  text-align: center;
+  color: #868884;
+}
+
+#privacy-policy a {
+  color: var(--submit-color);
 }
