--- a/sign_up_form/02/style.css
+++ b/sign_up_form/02/style.css
@@ -21,12 +21,13 @@ body {
   overflow: hidden;
   margin: 0;
   color: var(--dark_gray);
-  background-color: var(--dark_gray);
+  background-color: #f5f6f6;
   font-size: 0.85rem;
 }
 
 .container {
   background-color: white;
+  border-radius: 5px;
 }
 
 .left {
