--- a/login_form/01/style.css
+++ b/login_form/01/style.css
@@ -18,6 +18,7 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+  background-color: rgb(243, 240, 240);
 }
 
 .container {
@@ -27,6 +28,7 @@ body {
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   max-width: 1080px;
+  background-color: white;
 }
 
 .left {
@@ -35,7 +37,15 @@ body {
   padding: 1.5rem 2rem;
 }
 
+.logo img {
+  transform: scale(1.8);
+  max-width: 1ch;
+  margin-right: 0.8rem;
+}
+
 .left .logo {
+  display: flex;
+  align-items: center;
   margin-bottom: 2.5rem;
   font-weight: 700;
 }
@@ -60,7 +70,7 @@ body {
 
 .inputs label:not(.checkbox) {
   font-size: 0.6rem;
-  opacity: 0.25;
+  opacity: 0.4;
   padding: 0.5rem 0.3rem;
   margin: 0.5rem 0;
   border-radius: 5px;
@@ -68,8 +78,10 @@ body {
 }
 
 .inputs input:not(#checkbox) {
+  margin-top: 0.2rem;
   width: 100%;
   border: none;
+  font-family: inherit;
 }
 
 .inputs input:focus {
@@ -78,7 +90,18 @@ body {
 
 .inputs label.active {
   opacity: 1;
+  color: var(--secondary-color);
   border: 2px solid var(--primary-color);
+}
+
+input:read-write {
+  font-family: inherit;
+  font-weight: 500;
+  color: var(--secondary-color);
+}
+
+.inputs label.active span {
+  opacity: 0.4;
 }
 
 .password-control {
@@ -139,7 +162,7 @@ body {
   text-decoration: none;
 }
 
-img {
+.right img {
   display: none;
 }
 
@@ -154,10 +177,19 @@ img {
     grid-template-columns: 1fr 1.5fr;
   }
 
+  .logo span {
+    transform: translateY(0.5rem);
+  }
+
   .left {
     height: 100%;
     justify-content: space-around;
     padding-right: 6rem;
+  }
+
+  .left .logo {
+    font-weight: 600;
+    font-size: 2rem;
   }
 
   .left h1 {
@@ -165,14 +197,30 @@ img {
   }
 
   .left .top p {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
 
   .left label:not(.checkbox) {
-    font-size: 0.6rem;
+    font-size: 0.9rem;
   }
 
-  img {
+  .left .password-control {
+    font-size: 0.8rem;
+  }
+
+  .left button {
+    font-size: 0.9rem;
+  }
+
+  .left .privacy-policy {
+    font-size: 0.8rem;
+  }
+
+  .right {
+    position: relative;
+  }
+
+  .right img {
     display: initial;
     max-width: 100%;
     vertical-align: top;
