--- a/navbar/02/style.css
+++ b/navbar/02/style.css
@@ -9,6 +9,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
     bottom: 0;
 }
 
@@ -18,25 +19,251 @@ body {
     display: flex;
     justify-content: center;
     height: 100vh;
+    background: #e4e9f7;
 }
 
-nav {
-    position: static;
+.sidebar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 99;
+
+    color: var(--text-color);
+    background-color: var(--primary-color);
+
+    height: 100%;
+    width: 104px;
+    padding: 40px 24px 0 24px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+
+    transition: all 0.5s ease;
+
+    /* border-radius: 0 30px 30px 0; */
+}
+
+.sidebar .heading {
+    position: relative;
+    font-size: 1.4rem;
+    display: flex;
     align-items: center;
-    text-align: start;
+
+    color: white;
+    height: 24px;
+    text-transform: uppercase;
+    transition: all 0.5s ease;
+    margin-bottom: 18px;
+}
+
+.sidebar #menu_btn {
+    position: absolute;
+    cursor: pointer;
+    padding: 0 18px;
+    z-index: 4;
+    transition: all 0.5s ease;
+    right: 0;
+}
+
+.sidebar.active #menu_btn {
+    text-align: right;
+    right: 0;
+}
+
+.line {
+    align-self: center;
+    width: 100%;
+    height: 1px;
+
+    margin: 8px 0;
+
+    background-color: #313842;
+    transition: all 0.5s ease;
+}
+
+.sidebar .line:nth-child(2) {
+    width: 104px;
+}
+
+.sidebar.active .line:nth-child(2) {
+    width: 270px;
+}
+
+.sidebar ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+}
+
+.sidebar ul li {
+    position: relative;
+    margin: 8px 0;
+}
+
+.sidebar ul li a {
+    display: flex;
     height: 100%;
-    width: 88px;
-    padding: 40px 24px;
-    background-color: var(--primary-color);
+    width: 100%;
+    border-radius: 12px;
+    align-items: center;
+    text-decoration: none;
+    transition: all 0.4s ease;
+    color: var(--text-color);
+}
+
+.sidebar li a .links_name {
+    color: #fff;
+    font-weight: 400;
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.4s;
+}
+
+.sidebar ul li i {
+    text-align: center;
+    line-height: 56px;
+    min-width: 56px;
+    color: var(--text-color);
+}
+
+.sidebar ul li:hover a {
+    border-radius: 10px;
+    background-color: var(--secondary-color);
+}
+
+.sidebar ul li:hover a > * {
     color: white;
 }
 
-main .credits {
+.links_name,
+.user_name,
+.user_status {
+    /* display: none; */
+    opacity: 0;
+    transition: all 0.5s ease;
+}
+
+.sidebar.active {
+    background-color: var(--primary-color);
+
+    width: 270px;
+
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    transition: all 0.5s ease;
+}
+
+.sidebar.active ul li {
+    justify-content: start;
+}
+
+.sidebar.active ul li:hover {
+    border-radius: 10px;
+    background-color: var(--secondary-color);
+}
+
+.sidebar.active .links_name {
+    opacity: 1;
+    transition: all 0.5s ease;
+}
+
+.bottom_section {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    max-width: 104px;
+
+    font-weight: 400;
+    text-align: start;
+    display: flex;
+    align-items: center;
+    bottom: 0;
+    left: 0;
+    background-color: #213248;
+    width: 100%;
+    padding: 10px 24px 10px 24px;
+    color: white;
+    transition: all 0.5s ease;
+}
+
+.sidebar.active .bottom_section {
+    max-width: 270px;
+}
+
+.bottom_section .user_text {
+    display: flex;
+    flex-direction: column;
+}
+
+.bottom_section .img_container {
+    width: 56px;
+    height: 56px;
+    min-width: 56px;
+    transform: scale(0.7);
+}
+
+.img_container img {
+    border-radius: 100%;
+
+    max-width: 100%;
+}
+
+.bottom_section button {
+    background-color: transparent;
+    border: 0;
+    color: white;
+    margin-left: auto;
+    max-width: 100%;
+    cursor: pointer;
+}
+
+.bottom_section .user_name {
+    font-size: 0.8rem;
+}
+
+.bottom_section .user_status {
+    color: var(--text-color);
+    font-size: 0.7rem;
+}
+
+.sidebar.active .bottom_section {
+    padding: 10px 24px 10px 24px;
+
+    display: flex;
+    text-align: start;
+}
+
+main {
+    padding: 1rem 2rem;
+    position: relative;
+    min-height: 100vh;
+    top: 0;
+    left: 88px;
+    width: calc(100% - 88px);
+    transition: all 0.5s ease;
+    z-index: 2;
+    position: relative;
+}
+
+.sidebar.active ~ main {
+    left: 270px;
+    width: calc(100% - 270px);
+}
+
+main h1 {
+    margin: 1rem 0;
+}
+
+.credits {
     position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     bottom: 3px;
+    margin-left: auto;
+    left: 50%;
+    margin-bottom: 5px;
 }
 
 .credits a {
@@ -47,41 +274,84 @@ main .credits {
     text-align: center;
 }
 
-nav input[type='checkbox']:checked {
+@media (max-width: 600px) {
+    .sidebar .heading #menu_btn {
+        padding: 0 14px;
+    }
+
+    .sidebar {
+        padding: 20px 12px 0 12px;
+        width: 70px;
+        overflow-x: hidden;
+    }
+
+    .sidebar ul li {
+        margin: 0;
+    }
+
+    .sidebar ul li i {
+        min-width: 45px;
+        line-height: 45px;
+    }
+
+    .line {
+        display: none;
+    }
+
+    .bottom_section {
+        padding: 12px 12px;
+    }
+
+    .bottom_section .img_container {
+        width: 45px;
+        height: 45px;
+        min-width: 45px;
+        transform: scale(0.7);
+    }
 }
 
-nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
+@media (max-height: 900px) {
+    .sidebar .heading #menu_btn {
+        padding: 0 14px;
+    }
 
-nav ul i {
-    color: var(--text-color);
-    padding: 1rem;
-}
+    .sidebar {
+        padding: 20px 12px 0 12px;
+        width: 70px;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
 
-nav ul i:hover {
-    color: white;
-    border-radius: 10px;
-    background-color: var(--secondary-color);
-}
+    .sidebar.active {
+        width: 200px;
+    }
 
-nav ul a,
-nav h1,
-.user_name,
-.user_status {
-    display: none;
-}
+    .sidebar ul li {
+        margin: 0;
+    }
 
-nav a {
-    color: white;
-    margin-left: 1ch;
-    text-decoration: none;
-}
+    .sidebar ul li i {
+        min-width: 45px;
+        line-height: 45px;
+    }
 
-.heading {
-    text-transform: uppercase;
-    display: flex;
-    justify-content: space-between;
+    .line {
+        display: none;
+    }
+
+    .bottom_section {
+        padding: 12px 12px;
+        max-width: 70px;
+    }
+
+    .sidebar.active .bottom_section {
+        max-width: 200px;
+    }
+
+    .bottom_section .img_container {
+        width: 45px;
+        height: 45px;
+        min-width: 45px;
+        transform: scale(0.7);
+    }
 }
